@@ -1,3 +1,8 @@
+2012-01-24  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/51223
+	* g++.dg/parse/crash58.C: New.
+
 2012-01-24  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/51957
